--- a/style.css
+++ b/style.css
@@ -1,10 +1,66 @@
 body {
-  font-family: Yu Gothic, Arial, sans-serif;
-  text-align: center;
-  padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  font-family: Arial, sans-serif;
 }
 
 #counter-display {
-  font-size: 2em;
+  font-size: 1.7em;
   margin-bottom: 20px;
+}
+
+.loading-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border-left-color: #3498db;
+  animation: spin 1s ease-in-out infinite;
+  margin-bottom: 10px;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+button {
+  margin: 10px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  background-color: #3498db;
+  color: white;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+button:hover {
+  background-color: #2980b9;
+}
+
+/* 既存のスタイルに追加 */
+.logo-container {
+  text-align: center;
+  margin: 5px 0;
+}
+
+.logo {
+  width: 150px; /* ロゴのサイズを調整 */
+  height: auto;
 }
